pod-nginx.yaml
apiVersion : v1
kind: Pod
metadata:
  name: nginx
  labels:
    env : prod
    app : main
    tier: webserver
    owner: fagost32
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
