django-service-and-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django-deployment
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    name: django-deployment
spec:
  selector:
    matchLabels:
      name: django-dvmn
  # replicas: 3
  template:
    metadata:
      labels: 
        name: django-dvmn
    spec:
      containers:
        - name: django
          image: yurastar/django-dvmn:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    name: django-dvmn-service
spec:
  selector:
    name: django-dvmn
  ports:
    - port: 12345
      targetPort: 80
