ingress-star-burger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: star-burger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 12345
